--- a/Web Hosting/index.html
+++ b/Web Hosting/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <script src="https://kit.fontawesome.com/29b42125d9.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Hosting</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
 </head>
+
 <body>
     <div class="navbar-container">
         <nav>
-            <a href=""><img src="Assets/Img/LGO.PNG" alt="logotipo"
-            class="logo"></a>
+            <a href=""><img src="Assets/Img/LGO.PNG" alt="logotipo" class="logo"></a>
             <ul class="navbar-itens">
                 <li><a href="">HOME</a></li>
                 <li><a href="">PLANOS</a></li>
                 <li><a href="">CONTATO</a></li>
-                <li><a href="" clas="default-btn">LOGIN</a></li>
+                <li><a href="" class="default-btn">LOGIN</a></li>
             </ul>
         </nav>
     </div>
@@ -32,88 +33,116 @@
             <li>
                 <i class="fa-solid fa-shield-halved"></i>
                 <h3>SEGURANÇA</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolore, dolorem quaerat aperiam 
-                    veritatis at aut nemo dolor dolores facere expedita, illo numquam, impedit error a aspernatur accusamus quas assumenda?
-                     </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolore, dolorem quaerat aperiam
+                    veritatis at aut nemo dolor dolores facere expedita, illo numquam, impedit error a aspernatur
+                    accusamus quas assumenda?
+                </p>
             </li>
             <li>
                 <i class="fa-solid fa-rocket"></i>
                 <h3>VELOCIDADE</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolore, dolorem quaerat aperiam 
-                    veritatis at aut nemo dolor dolores facere expedita, illo numquam, impedit error a aspernatur accusamus quas assumenda?</p> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolore, dolorem quaerat aperiam
+                    veritatis at aut nemo dolor dolores facere expedita, illo numquam, impedit error a aspernatur
+                    accusamus quas assumenda?</p>
             </li>
             <li>
                 <i class="fa-solid fa-comments"></i>
                 <h3>SUPORTE</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolore, dolorem quaerat aperiam 
-                    veritatis at aut nemo dolor dolores facere expedita, illo numquam, impedit error a aspernatur accusamus quas assumenda?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolore, dolorem quaerat aperiam
+                    veritatis at aut nemo dolor dolores facere expedita, illo numquam, impedit error a aspernatur
+                    accusamus quas assumenda?</p>
             </li>
-        </ul>           
+        </ul>
     </section>
 
     <header class="background2">
-    <section class="planos-container">
-        <h2>Planos e Preços</h2>
-        <h3>Escolha o melhor plano para sua necessidade</h3>
-        <div class="precos-container">
+        <section class="planos-container">
+            <h2>Planos e Preços</h2>
+            <h3>Escolha o melhor plano para sua necessidade</h3>
+            <div class="precos-container">
 
-            <div class="plano">
-                <ul>
-                    <li class="preco">R$100,00</li>
-                    <li class="nome-plano">Padrão</li>
-                    <li>2GB de armazenamento</li>
-                    <li>10 subdomínios</li>
-                    <li>25 contas de e-mails</li>
-                    <li>C-Painel</li>
-                    <li>suporte 24/7</li>
-                    <li class="btn-plano">Selecionar</li>
+                <div class="plano">
+                    <ul>
+                        <li class="preco">R$100,00</li>
+                        <li class="nome-plano">Padrão</li>
+                        <li>2GB de armazenamento</li>
+                        <li>10 subdomínios</li>
+                        <li>25 contas de e-mails</li>
+                        <li>C-Painel</li>
+                        <li>suporte 24/7</li>
+                        <li class="btn-plano">Selecionar</li>
 
-                </ul>
+                    </ul>
+                </div>
+
+                <div class="plano">
+                    <ul>
+                        <li class="preco">R$150,00</li>
+                        <li class="nome-plano">Dedicado</li>
+                        <li>4GB de armazenamento</li>
+                        <li>15 subdomínios</li>
+                        <li>30 contas de e-mails</li>
+                        <li>C-Painel</li>
+                        <li>suporte 24/7</li>
+                        <li class="btn-plano">Selecionar</li>
+
+                    </ul>
+                </div>
+
+                <div class="plano">
+                    <ul>
+                        <li class="preco recomendado">R$180,00</li>
+                        <li class="nome-plano">Dedicado Plus</li>
+                        <li>10GB de armazenamento</li>
+                        <li>30 subdomínios</li>
+                        <li>50 contas de e-mails</li>
+                        <li>C-Painel</li>
+                        <li>suporte 24/7</li>
+                        <li class="btn-plano recomendado">Selecionar</li>
+
+                    </ul>
+                </div>
+
+                <div class="plano">
+                    <ul>
+                        <li class="preco">R$250,00</li>
+                        <li class="nome-plano">Cloud</li>
+                        <li>50GB de armazenamento</li>
+                        <li>50 subdomínios</li>
+                        <li>100 contas de e-mails</li>
+                        <li>C-Painel</li>
+                        <li>suporte 24/7</li>
+                        <li class="btn-plano">Selecionar</li>
+
+                    </ul>
+                </div>
             </div>
+        </section>
+    </header>
 
-            <div class="plano">
-                <ul>
-                    <li class="preco">R$150,00</li>
-                    <li class="nome-plano">Dedicado</li>
-                    <li>4GB de armazenamento</li>
-                    <li>15 subdomínios</li>
-                    <li>30 contas de e-mails</li>
-                    <li>C-Painel</li>
-                    <li>suporte 24/7</li>
-                    <li class="btn-plano">Selecionar</li>
 
-                </ul>
-            </div>
-
-            <div class="plano">
-                <ul>
-                    <li class="preco recomendado">R$180,00</li>
-                    <li class="nome-plano">Dedicado Plus</li>
-                    <li>10GB de armazenamento</li>
-                    <li>30 subdomínios</li>
-                    <li>50 contas de e-mails</li>
-                    <li>C-Painel</li>
-                    <li>suporte 24/7</li>
-                    <li class="btn-plano recomendado">Selecionar</li>
-
-                </ul>
-            </div>
-
-            <div class="plano">
-                <ul>
-                    <li class="preco">R$250,00</li>
-                    <li class="nome-plano">Cloud</li>
-                    <li>50GB de armazenamento</li>
-                    <li>50 subdomínios</li>
-                    <li>100 contas de e-mails</li>
-                    <li>C-Painel</li>
-                    <li>suporte 24/7</li>
-                    <li class="btn-plano">Selecionar</li>
-
-                </ul>
-            </div>
-        </div>
+    <section class="buscar-dominio">
+        <h2>Buscar um domínio</h2>
+        <p>Verifique se o domínio está disponível</p>
+        <form action="">
+            <input type="text" name="domain" placeholder="digite o nome do domínio">
+            <input type="submit" value="Buscar">
+        </form>
     </section>
-</header>
+
+    <section class="contato-container">
+        <h2>Entre em contato</h2>
+        <form action=""><input type="email" name="email" placeholder="digite seu e-mail">
+        <input type="text" name="nome" placeholder="digite seu nome">
+    <textarea name="message" placeholder="digite sua mensagem"></textarea>
+    <input type="submit" value="Enviar">
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; Senai 2024 - Todos os direitos reservados</p>
+    </footer>
+
 </body>
-</html>            
+
+</html>
